# confort-

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  ENV_VARIABLES.md  FRAUD_PREVENTION.md  PRODUCTION_READINESS.md  PRODUCTION_SECURITY.md  QA_TEST_GUIDE.md  README.md  TROUBLESHOOTING.md  jest.config.js  package-lock.json  package.json  pyproject.toml  vercel.json  vitest.config.ts
.agents/plugins/: orchestration
.agents/skills/: forge-algorithmic-art  forge-canvas-design  forge-coding  forge-frontend-design  forge-mcp-builder  forge-planning  forge-skill-creator  forge-web-artifacts-builder  lore-brand-guidelines  lore-changelog  lore-doc-coauthoring  lore-documentation  lore-docx  lore-pdf  lore-pptx  lore-theme-factory  lore-xlsx  nexus-doc-coauthoring  nexus-internal-comms  nexus-orchestration  nexus-skill-creator  nexus-slack-gif-creator  nexus-triage  nexus-xlsx  sentinel-algorithmic-art  sentinel-criteria  sentinel-frontend-design  sentinel-review  sentinel-web-artifacts-builder  sentinel-webapp-testing  shared-claude-api  vessel-ci-gate  vessel-internal-comms  vessel-mcp-builder  vessel-merge-protocol  vessel-pdf  vessel-webapp-testing
.github/workflows/: ci.yml
__tests__/: index.test.ts
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/__tests__/: Manager.test.jsx  ParticleBackground.test.jsx  ParticleBurst.test.jsx  ScanEffect.test.jsx  SuccessScreen.test.jsx  api.test.js  setup.js
frontend/src/components/: Layout.jsx  Manager.css  Manager.jsx  ParticleBackground.jsx  ParticleBurst.jsx  Payment.jsx  ScanEffect.jsx  SuccessScreen.jsx  TimeSelection.jsx
frontend/src/constants/: timeSlots.js
frontend/src/i18n/: config.js
frontend/src/i18n/locales/: en.json  fr.json
frontend/src/lib/: api.js  supabase.js
orchestration/agent/tooling/: run-tests.sh
src/: code_gen.rs  config.rs  crypto.rs  db.rs  fapshi.rs  handlers.rs  index.test.ts  lib.rs  main.rs  models.rs
src/confort/: __init__.py  api.py  code_generator.py  db.py  qr_generator.py
supabase/migrations/: 001_create_transactions.sql
test/: index.test.ts
tests/: crypto_tests.rs  integration_tests.rs  test_api.py  test_confort.py
