[package]
name = "confort"
version = "0.1.0"
edition = "2021"

[lib]
name = "confort"
path = "src/lib.rs"

[[bin]]
name = "confort"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
once_cell = "1.19"
futures = "0.3"
rand = "0.8"

[dev-dependencies]
httpmock = "0.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
